<resources>
    <string name="app_name">Yummy</string>
    <string name="hello_blank_fragment">I\'m free</string>

    <!-- Warning Messages -->
    <string name="empty_email_field">Please enter an email.</string>
    <string name="not_valid_email">Please enter a valid email.</string>
    <string name="empty_email_or_password_field">Please fill email and password field.</string>
    <string name="fill_every_field">Please fill every field.</string>
    <string name="not_found_user_uid">User UID not found</string>
    <string name="empyt_name_or_surname_field">Please fill name and surname field.</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="undo">Undo</string>
    <string name="need_permission_to_access_gallery">Need permission to access gallery</string>
    <string name="give_permission">Give permission</string>

    <!-- Error Messages -->
    <string name="unknown_error_for_firebase_register">Unknown Error For Firebase Register</string>
    <string name="unknown_error_for_firebase_login">Unknown Error For Firebase Login</string>
    <string name="unknown_error_for_firebase_send_password_reset_email">Unknown Error For Firebase Send Password Reset Email</string>
    <string name="unknown_error_for_getting_user_information">Unknown Error For Getting User Information</string>
    <string name="unknown_error_for_getting_categories">Unknown Error For Getting Categories</string>
    <string name="unknown_error_for_getting_random_meal">Unknown Error For Getting Random Meal</string>
    <string name="unknown_error_for_getting_category_meals">Unknown Error For Getting Category Meals</string>
    <string name="unknown_error_for_getting_meal_by_id">Unknown Error For Getting Meal By Id</string>
    <string name="unknown_error_for_getting_meals_by_name">Unknown Error For Getting Meals By Name</string>
    <string name="unknown_error_for_saving_user_information">Unknown Error For Saving User Information</string>
    <string name="unknown_error_for_is_favorite">Unknown Error For Is Favorite</string>
    <string name="unknown_error_for_adding_favorite_meal">Unknown Error For Adding Favorite Meal</string>
    <string name="unknown_error_for_removing_favorite_meal">Unknown Error For Removing Favorite Meal</string>
    <string name="couldnt_add_to_favorites">Couldn\'t add to favorites</string>
    <string name="couldnt_remove_from_favorites">Couldn\t remove from favorites</string>
    <string name="unknown_error_for_getting_all_favorites">Unknown Error For Getting All Favorites</string>

    <!-- Information Messages -->
    <string name="profile_information_updated_successfully">Profile information has been successfully updated.</string>

    <!-- Success Messages -->
    <string name="add_to_favorites_successfully">The meal has been successfully add to favorites.</string>
    <string name="remove_from_favorites_successfully">The meal has been successfully remove from favorites.</string>
    <string name="favorite_meal_deleted">The favorite meal deleted</string>

    <!-- Bottom Navigation View -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="user_recipe">User Recipe</string>
    <string name="favorite">Favorite Recipe</string>

    <!-- Login Fragment -->
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="dont_you_have_account"><font color="#A7B0C0">Don\'t you have an account?</font> <font color="#1564BF"><b>Register</b></font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Register Fragment -->
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="have_already_account">I\'ve already an account</string>

    <!-- Forgot Password -->
    <string name="reset_password_message">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="send_password_reset_email_successfully">Password reset email sent successfully</string>

    <!-- Home Fragment -->
    <string name="how_about_this_recipe">How about this recipe?</string>
    <string name="categories">Categories</string>

    <!-- Meal Detail Fragment -->
    <string name="instruction">Instructions</string>
    <string name="categoryName">\t%1$s</string>
    <string name="areaName">\t%1$s</string>

    <!-- Favorite Fragment -->
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_name">%1$s %2$s</string>

    <!-- Custom Dialog -->
    <string name="okay">Okay</string>
    <string name="loading">Loading…</string>

    <!-- User Edit Fragment -->
    <string name="profile_edit">Profile Edit</string>
</resources>