<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.auth.register.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_0.7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/header"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/h_guideline_0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/CustomTextInputLayout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        app:boxStrokeColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_0.9"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_0.1"
        app:layout_constraintTop_toTopOf="@+id/h_guideline_0.2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/CustomTextInputLayout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:boxStrokeColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_0.9"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_0.1"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/CustomTextInputLayout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:boxStrokeColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_0.9"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_0.1"
        app:layout_constraintTop_toBottomOf="@+id/til_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_surname"
        style="@style/CustomTextInputLayout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:boxStrokeColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_0.9"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_0.1"
        app:layout_constraintTop_toBottomOf="@+id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/register"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintEnd_toStartOf="@id/v_guideline_0.9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/v_guideline_0.1"
        app:layout_constraintTop_toBottomOf="@+id/h_guideline_0.7" />

    <TextView
        android:id="@+id/tv_have_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_32"
        android:text="@string/have_already_account"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>