<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.auth.forgotPassword.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <TextView
        android:id="@+id/tv_reset_password_message"
        android:text="@string/reset_password_message"
        android:textSize="@dimen/header"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_32"
        android:textColor="@color/primaryColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/v_guideline_0.1"
        app:layout_constraintEnd_toStartOf="@id/v_guideline_0.9"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_0" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintStart_toStartOf="@id/v_guideline_0.1"
        app:layout_constraintEnd_toEndOf="@id/v_guideline_0.9"
        app:boxCornerRadiusTopEnd="@dimen/cornerRadius"
        app:boxCornerRadiusTopStart="@dimen/cornerRadius"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRadius"
        app:boxCornerRadiusBottomStart="@dimen/cornerRadius"
       app:layout_constraintTop_toBottomOf="@id/tv_reset_password_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset_password"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/reset"
        android:backgroundTint="@color/primaryColor"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_0.9"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_0.1"
        app:layout_constraintTop_toBottomOf="@id/til_email" />
</androidx.constraintlayout.widget.ConstraintLayout>