<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.userEdit.UserEditFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/tv_profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_edit"
        android:textColor="@color/header"
        android:textSize="@dimen/header"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cv_profile_photo"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_0.9"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile_photo"
        android:layout_width="@dimen/user_edit_profile_photo_width"
        android:layout_height="@dimen/user_edit_profile_photo_width"
        app:cardCornerRadius="@dimen/user_edit_profile_photo_radius"
        app:layout_constraintBottom_toTopOf="@+id/til_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRadius"
        app:boxCornerRadiusBottomStart="@dimen/cornerRadius"
        app:boxCornerRadiusTopEnd="@dimen/cornerRadius"
        app:boxCornerRadiusTopStart="@dimen/cornerRadius"
        app:boxStrokeColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@+id/til_surname"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_0.9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_0.1"
        app:layout_constraintTop_toBottomOf="@+id/cv_profile_photo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_surname"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRadius"
        app:boxCornerRadiusBottomStart="@dimen/cornerRadius"
        app:boxCornerRadiusTopEnd="@dimen/cornerRadius"
        app:boxCornerRadiusTopStart="@dimen/cornerRadius"
        app:boxStrokeColor="@color/primaryColor"
        app:hintTextColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_0.9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_0.1"
        app:layout_constraintTop_toBottomOf="@+id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:backgroundTint="@color/primaryColor"
        android:theme="@style/CustomFabStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>